--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script>
     // Zet direct de eerste achtergrond, en wissel elke 50 seconden
     const images = [
-      'Foto1.jpg', 'Foto2.jpg', 'Foto3.jpg', 'Foto4.jpg', 'Foto5.jpg', 'Foto6.jpg', 'Foto7.jpg', 'Foto8.jpg', 'Foto9.jpg', 'Foto10.jpg', 'Foto11.jpg', 'Foto12.jpg', 'Foto13.jpg', 'Foto14.jpg'
+      'Foto1 Lol.jpg', 'Foto2 Lol.jpg', 'Foto3 Lol.jpg', 'Foto4 Lol.jpg', 'Foto5 Lol.jpg', 'Foto6 Lol.jpg', 'Foto7 Lol.jpg', 'Foto8 Lol.jpg', 'Foto9 Lol.jpg', 'Foto10 Lol.jpg', 'Foto11 Lol.jpg', 'Foto12 Lol.jpg', 'Foto13 Lol.jpg', 'Foto14 Lol.jpg'
     ];
     let idx = 0;
     const bg = document.getElementById('video-background');
@@ -23,7 +23,7 @@
     setInterval(() => {
       idx = (idx + 1) % images.length;
       setBG();
-    }, 50000);
+    }, 10000);
   </script>
 
   <!-- Weeronline widget (links boven) -->
