--- a/index.html
+++ b/index.html
@@ -11,19 +11,34 @@
   <script>
     // Zet direct de eerste achtergrond, en wissel elke 50 seconden
     const images = [
-      'Foto1 Lol.jpg', 'Foto2 Lol.jpg', 'Foto3 Lol.jpg', 'Foto4 Lol.jpg', 'Foto5 Lol.jpg', 'Foto6 Lol.jpg', 'Foto7 Lol.jpg', 'Foto8 Lol.jpg', 'Foto9 Lol.jpg', 'Foto10 Lol.jpg', 'Foto11 Lol.jpg', 'Foto12 Lol.jpg', 'Foto13 Lol.jpg', 'Foto14 Lol.jpg'
+      'Foto1 Lol.jpg', 'Foto2 Lol.jpg', 'Foto3 Lol.jpg', 'Foto4 Lol.jpg', 'Foto5 Lol.jpg', 'Foto6 Lol.jpg', 'Foto7 Lol.jpg', 'Foto8 Lol.jpg', 'Foto9 Lol.jpg', 'Foto10 Lol.jpg','Foto11 Lol.jpg', 'Foto12 Lol.jpg', 'Foto13 Lol.jpg', 'Foto14 Lol.jpg', 'Foto15 Lol.jpg', 'Foto16 Lol.jpg', 'Foto17 Lol.jpg', 'Foto18 Lol.jpg', 'Foto19 Lol.jpg', 'Foto20 Lol.jpg', 'Foto21 Lol.jpg', 'Foto22 Lol.jpg', 'Foto23 Lol.jpg', 'Foto24 Lol.jpg'
     ];
     let idx = 0;
     const bg = document.getElementById('video-background');
+
+    // Shuffle-functie om willekeurige volgorde te maken (behalve eerste foto)
+    function shuffle(array) {
+      let shuffled = array.slice(1); // sla eerste foto over
+      for (let i = shuffled.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [shuffled[i], shuffled[j]] = [shuffled[j], shuffled[i]];
+      }
+      return [array[0], ...shuffled]; // zet Foto1 weer vooraan
+    }
+
+    const shuffledImages = shuffle(images);
+
     function setBG() {
-      bg.style.backgroundImage = `url('${images[idx]}')`;
+      bg.style.backgroundImage = `url('${shuffledImages[idx]}')`;
       bg.style.backgroundColor = '';
     }
+
     setBG();
     setInterval(() => {
-      idx = (idx + 1) % images.length;
+      idx = (idx + 1) % shuffledImages.length;
       setBG();
     }, 10000);
+
   </script>
 
   <!-- Weeronline widget (links boven) -->
